# ontos

src/: manifest.yaml  package.json  pyproject.toml
src/backend/: .coverage
src/backend/alembic/: env.py
src/backend/alembic/versions/: u1688q502ss5_add_ml_lifecycle_tables.py  v2799r613tt6_add_training_data_quality_tables.py
src/backend/src/: __init__.py  app.py
src/backend/src/common/: config.py  database.py  features.py  workflow_executor.py
src/backend/src/connectors/: unity_catalog_data_connector.py
src/backend/src/controller/: catalog_commander_manager.py  data_catalog_manager.py  data_contracts_manager.py  data_products_manager.py  datasets_manager.py  industry_ontology_manager.py  jobs_manager.py  llm_search_manager.py  ml_deploy_manager.py  ml_improve_manager.py  ml_monitor_manager.py  notifications_manager.py  search_manager.py  semantic_models_manager.py  settings_manager.py  tags_manager.py  training_data_manager.py  training_data_quality_manager.py
src/backend/src/data/: demo_data.sql  mirion_training_demo_data.sql
src/backend/src/db_models/: __init__.py  comments.py  datasets.py  training_data.py
src/backend/src/models/: data_catalog.py  datasets.py  llm_search.py  ml_deploy.py  ml_improve.py  ml_monitor.py  ontology.py  training_data.py  training_data_quality.py
src/backend/src/repositories/: datasets_repository.py  rdf_triples_repository.py  training_data_repository.py
src/backend/src/routes/: access_requests_routes.py  audit_routes.py  catalog_commander_routes.py  comments_routes.py  compliance_routes.py  data_contracts_routes.py  data_product_routes.py  datasets_routes.py  ml_deploy_routes.py  ml_improve_routes.py  ml_monitor_routes.py  semantic_models_routes.py  settings_routes.py  training_data_quality_routes.py  training_data_routes.py  workflows_routes.py
src/backend/src/tools/: __init__.py  analytics.py  base.py  costs.py  data_contracts.py  data_products.py  registry.py  semantic_models.py  tags.py
src/backend/src/utils/: startup_tasks.py
src/frontend/: package.json
src/frontend/src/: app.tsx
src/frontend/src/components/: unity-catalog-logo.tsx
src/frontend/src/config/: features.ts
src/frontend/src/hooks/: use-api.ts  use-ratings.ts
src/frontend/src/lib/: workflow-labels.ts
src/frontend/src/stores/: feature-visibility-store.ts
src/frontend/src/types/: data-catalog.ts  dataset.ts  ontology.ts  training-data.ts
src/frontend/src/views/: about.tsx  business-glossary.tsx  catalog-commander.tsx  data-asset-review-details.tsx  data-catalog-details.tsx  (+20 more)
(+49 files in other folders)
